# cli_todo

./: README.md  SPEC.md  pyproject.toml
.td/: config.yaml
.td/tasks/: add-homebrew-tap.yaml  add-install-instructions-to-skill-after-pypi-publish.yaml  pipx-reinstall-needed-after-local-edits.yaml  publish-to-pypi.yaml
td/: cli.py  models.py  store.py
tests/: test_cli.py  test_models.py  test_store.py
